# hippo

./: .gitignore  .semgrep.yml  .sqlfluff  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPL_NOTES.md  README.md  lefthook.yml  mise.toml  rust-toolchain.toml
.ralph/: hippo-bench-v2-state.json
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
brain/: README.md  pyproject.toml
brain/scripts/: backfill-git-repo.py  dedup-entities.py  dedup-knowledge-nodes.py  migrate-v5-to-v6.py  migrate-vectors.py  re-enrich-knowledge-nodes.py
brain/src/hippo_brain/: __init__.py  api_cli.py  auto_memory.py  browser_enrichment.py  claude_sessions.py  client.py  codex_sessions.py  embeddings.py  enrichment.py  enrichment_sources.py  entity_resolver.py  evaluation.py  lessons.py  markdown_chunking.py  mcp.py  mcp_logging.py  mcp_queries.py  models.py  openapi.py  opencode_sessions.py  rag.py  redaction.py  retrieval.py  schema_version.py  server.py  source_filters.py  telemetry.py  training.py  vault_edges.py  vault_export.py  vault_render.py  vector_store.py  version.py  watchdog.py  workflow_enrichment.py
brain/src/hippo_brain/_fixtures/: eval_questions.json  schema_v5_min.sql
brain/src/hippo_brain/_fixtures/auto_memory_spike/: manifest.json
brain/src/hippo_brain/_fixtures/auto_memory_spike/source/: MEMORY.md  debugging.md  duplicate_feedback.md  feedback_candor.md  project_architecture.md  workflow.md
brain/src/hippo_brain/bench/: README.md  __init__.py  auto_memory_spike.py  cli.py  config.py  coordinator.py  coordinator_v2.py  corpus.py  corpus_v2.py  dashboard_export.py  determinism.py  downstream_proxy.py  enrich_call.py  gates.py  lms.py  metrics.py  model_lifecycle.py  orchestrate.py  orchestrate_v2.py  output.py  output_v2.py  paths.py  pause_rpc.py  preflight.py  preflight_v2.py  pretty.py  prod_config.py  qa.py  qa_seed.py  qa_template.jsonl  qa_template.provenance.json  results_store.py  runner.py  schemas.py  schemas_v2.py  shadow_stack.py  summary.py
brain/tests/: _bench_fixtures.py  conftest.py  eval_questions.json  test_agentic_node_replacement.py  test_api_cli.py  test_auto_memory.py  test_auto_memory_spike.py  test_backfill_git_repo.py  test_bench_cli.py  test_bench_config.py  test_bench_coordinator.py  test_bench_coordinator_v2.py  test_bench_corpus.py  test_bench_corpus_v2.py  test_bench_dashboard_export.py  test_bench_determinism.py  test_bench_downstream_proxy.py  test_bench_e2e.py  test_bench_enrich_call.py  test_bench_gates.py  test_bench_golden.py  test_bench_lms.py  test_bench_metrics.py  test_bench_model_lifecycle.py  test_bench_orchestrate.py  test_bench_output.py  test_bench_pause_recovery.py  test_bench_pause_rpc.py  test_bench_preflight.py  test_bench_pretty.py  test_bench_prod_config.py  test_bench_qa.py  test_bench_results_store.py  test_bench_runner.py  test_bench_schemas.py  test_bench_shadow_stack.py  test_bench_summary.py  test_bench_telemetry_isolation.py  test_browser_enrichment.py  test_claude_sessions.py  (+44 more)
brain/tests/fixtures/golden_corpus_v1/: expected_scores.json  qa.jsonl
config/: README.md  config.default.toml  redact.default.toml
crates/hippo-core/: Cargo.toml  README.md
crates/hippo-core/src/: config.rs  events.rs  gh_annotations.rs  lib.rs  primitives.rs  protocol.rs  redaction.rs  schema.sql  storage.rs
crates/hippo-core/src/agentic/: mod.rs  render.rs  types.rs
crates/hippo-core/src/schema/: auto_memory.sql
crates/hippo-core/tests/: agentic_envelope.rs  agentic_render.rs  agentic_types.rs  schema_v5_migration.rs  schema_v6_migration.rs  schema_v7_migration.rs  watchlist.rs  workflow_store.rs
crates/hippo-core/tests/fixtures/: schema_v4.sql  schema_v6.sql
crates/hippo-daemon/: Cargo.toml  README.md  build.rs
crates/hippo-daemon/src/: auto_memory_poll.rs  backfill.rs  claude_session.rs  cli.rs  codex_session.rs  commands.rs  cursor_session.rs  daemon.rs  framing.rs  gh_api.rs  gh_poll.rs  git_repo.rs  health_score.rs  install.rs  lib.rs  main.rs  metrics.rs  native_messaging.rs  opencode_session.rs  probe.rs  process_metrics.rs  schema_handshake.rs  source_health_metric.rs  telemetry.rs  watch_claude_sessions.rs  watchdog.rs
crates/hippo-daemon/tests/: capture_invariants.rs  claude_session.rs  claude_session_watcher_integration.rs  codex_session.rs  cursor_session.rs  doctor_checks_2_5_6_9_10.rs  fallback_age_doctor.rs  gh_api.rs  gh_poll_integration.rs  nm_heartbeat_integration.rs  nm_manifest_doctor.rs  nm_restart_integration.rs  opencode_session.rs  probe_exclusion.rs  shell_hook.rs  source_audit.rs  telemetry_env_resource_test.rs  telemetry_test.rs  watchlist_rpc.rs
crates/hippo-daemon/tests/common/: mod.rs
crates/hippo-daemon/tests/fixtures/codex/: rollout-cli.jsonl
crates/hippo-daemon/tests/fixtures/cursor/: transcript-main.jsonl  transcript-subagent.jsonl
crates/hippo-daemon/tests/source_audit/: browser_events.rs  claude_session_batch.rs  claude_session_tailer.rs  claude_subagent.rs  claude_tool_events.rs  cursor_agent.rs  doctor_freshness.rs  shell_events.rs  source_health_write_paths.rs  workflow_runs.rs  xcode_codingassistant.rs
docs/: FEATURE_TIMELINE.md  RELEASE.md  architecture-review-tracker.md  auto-memory.md  brain-watchdog.md  eval-harness-design.md  investigation-failed-queue-items-summary.md  investigation-failed-queue-items.md  lifecycle.md  mcp-reference.md  redaction.md  release.md  schema-migration-strategy.md  schema.md  smoke-test-and-risk-assessment.md  vault-export.md
gui/: Package.swift
hippo-gui/: Package.swift  README.md
launchd/: com.hippo.auto-memory.plist  com.hippo.brain.plist  com.hippo.claude-session-watcher.plist  com.hippo.codex-session.plist  com.hippo.cursor-session.plist  com.hippo.daemon.plist  com.hippo.gh-poll.plist  com.hippo.omlx.plist  com.hippo.opencode-poll.plist  com.hippo.probe.plist  com.hippo.vault-sync.plist  com.hippo.watchdog.plist  com.hippo.xcode-claude-ingest.plist  com.hippo.xcode-codex-ingest.plist
otel/: README.md  docker-compose.yml  loki-config.yml  otelcol-config.yml  tempo-config.yml
(+318 files in other folders)
