[workspace]
members = ["crates/hippo-core", "crates/hippo-daemon"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "1.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
opentelemetry-appender-tracing = "0.29"
tracing-opentelemetry = "0.30"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
sha2 = "0.11"
