[project]
name = "hippo-brain"
version = "0.10.1"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "lancedb>=0.30",
    "mcp>=1.0",
    "pyarrow>=23.0",
    "uvicorn>=0.42",
    "starlette>=1.0",
    "opentelemetry-api>=1.33",
    "opentelemetry-sdk>=1.33",
    "opentelemetry-exporter-otlp-proto-http>=1.33",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15",
    "sqlfluff>=4.1.0",
]

[project.scripts]
hippo-brain = "hippo_brain:main"
hippo-mcp = "hippo_brain.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hippo_brain"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: tests requiring a running LM Studio instance",
]
