[project]
name = "hippo-brain"
version = "0.13.5"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "mcp>=1.0",
    "sqlite-vec>=0.1.6",
    "uvicorn>=0.42",
    "starlette>=1.0",
    "opentelemetry-api>=1.33",
    "opentelemetry-sdk>=1.33",
    "opentelemetry-exporter-otlp-proto-http>=1.33",
    "opentelemetry-instrumentation-logging>=0.54b1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15",
    "sqlfluff>=4.1.0",
]

[project.scripts]
hippo-brain = "hippo_brain:main"
hippo-mcp = "hippo_brain.mcp:main"
hippo-eval = "hippo_brain.evaluation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hippo_brain"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: tests requiring a running LM Studio instance",
]

[tool.coverage.run]
source_pkgs = ["hippo_brain"]
omit = [
    "*/scripts/*",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 82
exclude_also = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
