[package]
name = "hippo-daemon"
version.workspace = true
edition.workspace = true

[lib]
name = "hippo_daemon"
path = "src/lib.rs"

[[bin]]
name = "hippo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hippo-core = { path = "../hippo-core" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs = "6"
libc = "0.2"
hostname = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3"
