[package]
name = "hippo-daemon"
version.workspace = true
edition.workspace = true

[lib]
name = "hippo_daemon"
path = "src/lib.rs"

[[bin]]
name = "hippo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hippo-core = { path = "../hippo-core" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = { workspace = true }
uuid.workspace = true
chrono.workspace = true
dirs = "6"
libc = "0.2"
hostname = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rusqlite.workspace = true
url = "2.5.8"
serde = { workspace = true, features = ["derive"] }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
which = "8.0.2"

[features]
default = ["otel"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-appender-tracing",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
